refactor: update import paths to use node: prefix and improve path normalization
- Changed import statements to use 'node:' prefix for built-in modules (path, fs).
- Refactored path normalization functions to use replaceAll for better readability.
- Introduced new utility functions to encapsulate logic for finding the best project for entries and selecting the best scored project.
- Removed unused Gradle wrapper and classpath resolution code to streamline the extension's functionality.
- Enhanced classpath fetching logic to improve handling of JDK entries and project settings.